--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_svg: ^0.19.0
+  mask_text_input_formatter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
