--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_svg: ^0.19.0
   mask_text_input_formatter: ^1.1.0
+  dio: ^3.0.9
+
 
 dev_dependencies:
   flutter_test:
