--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   flutter_svg: ^0.19.0
   mask_text_input_formatter: ^1.1.0
   dio: ^3.0.9
-
+  loading_overlay: ^0.2.1
 
 dev_dependencies:
   flutter_test:
