--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   mask_text_input_formatter: ^1.1.0
   dio: ^3.0.9
   loading_overlay: ^0.2.1
+  flutter_bloc: ^6.1.1
+  equatable: ^1.2.5
 
 dev_dependencies:
   flutter_test:
