--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,15 +20,12 @@ dependencies:
     # the parent directory to use the current plugin's version.
     path: ../
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  flutter_svg: ^0.19.0
-  mask_text_input_formatter: ^1.1.0
-  dio: ^3.0.9
-  loading_overlay: ^0.2.1
-  flutter_bloc: ^6.1.1
-  equatable: ^1.2.5
+  flutter_svg: ^0.22.0
+  mask_text_input_formatter: ^2.0.0-nullsafety.2
+  dio: ^4.0.0
+  loading_overlay: ^0.3.0
+  flutter_bloc: ^7.0.0
+  equatable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
